# vsx-examples

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  BeagleBoard.code-workspace  README.md  settings.json
.github/workflows/: checks.yml  docs.yml
BeagleBone/Black/: analogIn.BBIO.py  analogIn.py  analogInCallback.js  analogInContinuous.py  analogInOut.js  analogInSync.js  blinkInternalLED.sh  blinkLED.bs.js  blinkLED.c  blinkLED.js  blinkLED.py  blinkLED.sh  blinkLED2.py  blinkLEDold.py  fadeLED.js  fadeLED.py  input.js  input2.js  seqLEDs.BBIO.py  seqLEDs.py  swipeLED.js
BeagleBone/Black/gpiod/: ReadMe.md  bulk_blink.py  get.c  get.py  get.sh  getset.c  getset.py  getsetEvent.c  getsetEvent.py  toggle1.c  toggle1.py  toggle1.sh  toggle2.c  toggle2.py  toggleLED.c  toggleLED.py
Libraries/pru/: Makefile  am62_pru0_pwm.asm  am62x_pru.cmd  pwm.am62_pru0.asm  pwm.am62_pru0.c
Libraries/python/: chardev.py  sysfs.py  tone.py
Libraries/python/beagle_helper/: pyproject.toml
Libraries/python/beagle_helper/src/beagle_helper/: __init__.py  pin.py
Libraries/python/beagle_linux_sdk/: pyproject.toml
Libraries/python/beagle_linux_sdk/src/beagle_linux_sdk/: __init__.py  button.py  led.py  pin.py  pwm_led.py
Libraries/rust/beagle_helper/: Cargo.toml
Libraries/rust/beagle_helper/src/: chardev.rs  lib.rs  pin.rs  sysfs.rs  tone.rs
Libraries/rust/beagle_helper/src/abstractions/: adc.rs
Libraries/rust/beagle_helper/src/boards/: pocketbeagle2.rs
Libraries/rust/beagle_helper/src/devices/: accelerometer.rs  button.rs  led.rs  mod.rs  pwm_led.rs  rgb_led.rs  seven_segment.rs  tonal_buzzer.rs
Libraries/rust/beagle_linux_sdk/: Cargo.toml
Libraries/rust/beagle_linux_sdk/src/: lib.rs  pin.rs
Libraries/rust/beagle_linux_sdk/src/abstractions/: mod.rs  pwm.rs
Libraries/rust/beagle_linux_sdk/src/boards/: mod.rs  pocketbeagle2.rs
Libraries/rust/beagle_linux_sdk/src/devices/: beagle_eeprom.rs  led.rs  light_sensor.rs  mod.rs
PocketBeagle-2/: Cargo.toml  LICENSE.md  PocketBeagle-2-TechLab-Workshop-Student-Handouts.sil  README.md
PocketBeagle-2/TechLab/: PocketBeagle-2-TechLab-Workshop-Student-Handouts.sil
PocketBeagle-2/accelerometer/: README.md
PocketBeagle-2/accelerometer/python/: main.py
PocketBeagle-2/accelerometer/rust/: Cargo.toml
PocketBeagle-2/accelerometer/rust/src/: main.rs
PocketBeagle-2/blinky/: README.md
PocketBeagle-2/blinky/python/: main.py
PocketBeagle-2/blinky/rust/: Cargo.toml
PocketBeagle-2/blinky/rust/src/: main.rs
PocketBeagle-2/blinky/src/: main.rs
PocketBeagle-2/button/: README.md
PocketBeagle-2/button/python/: chardev.py  main.py
PocketBeagle-2/button/rust/: Cargo.toml  README.md
PocketBeagle-2/button/rust/src/: main.rs
PocketBeagle-2/button/src/: main.rs
PocketBeagle-2/eeprom/: Cargo.toml  README.md
PocketBeagle-2/eeprom/python/: main.py  sysfs.py
PocketBeagle-2/eeprom/rust/: Cargo.toml
PocketBeagle-2/eeprom/rust/src/: main.rs
PocketBeagle-2/eeprom/src/: test.rs
PocketBeagle-2/fade/: Cargo.toml  README.md
PocketBeagle-2/fade/python/: main.py
PocketBeagle-2/fade/rust/: Cargo.toml
PocketBeagle-2/fade/rust/src/: main.rs
PocketBeagle-2/fade/src/: main.rs
PocketBeagle-2/hello_beagle/: Cargo.toml  README.md
PocketBeagle-2/hello_beagle/src/: main.rs
PocketBeagle-2/light_sensor/: README.md
PocketBeagle-2/light_sensor/python/: main.py
PocketBeagle-2/light_sensor/rust/: Cargo.toml
PocketBeagle-2/light_sensor/rust/src/: main.rs
PocketBeagle-2/rgb_led/: README.md
PocketBeagle-2/rgb_led/color_circle/: README.md
PocketBeagle-2/rgb_led/color_circle/python/: main.py  sysfs.py
PocketBeagle-2/rgb_led/color_circle/rust/: Cargo.toml
PocketBeagle-2/rgb_led/fade_brightness/: README.md
PocketBeagle-2/rgb_led/fade_brightness/python/: main.py
PocketBeagle-2/rgb_led/fade_intensity/: README.md
PocketBeagle-2/rgb_led/fade_intensity/python/: main.py
PocketBeagle-2/rgb_led/fade_intensity/rust/: Cargo.toml
PocketBeagle-2/rgb_led/fade_intensity/rust/src/: main.rs
PocketBeagle-2/rgb_led/hue/: README.md
PocketBeagle-2/rgb_led/hue/python/: main.py
PocketBeagle-2/rgb_led/hue/rust/: Cargo.toml
PocketBeagle-2/rgb_led/python/: main.py
PocketBeagle-2/rgb_led/rust/: Cargo.toml
PocketBeagle-2/rgb_led/rust/src/: main.rs
PocketBeagle-2/seven_segment/: README.md
PocketBeagle-2/seven_segment/python/: main.py
PocketBeagle-2/seven_segment/rust/: Cargo.toml
PocketBeagle-2/seven_segment/rust/src/: main.rs
PocketBeagle-2/tonal_buzzer/: README.md
PocketBeagle-2/tonal_buzzer/python/: main.py  melody.py  tone.py
PocketBeagle-2/tonal_buzzer/rust/: Cargo.toml
PocketBeagle-2/tonal_buzzer/rust/src/: hedwig.rs  main.rs
PocketBeagle2/: Cargo.toml  README.md
PocketBeagle2/blinky/: Cargo.toml  README.md
PocketBeagle2/blinky/python/: main.py
PocketBeagle2/blinky/rust/: Cargo.toml
PocketBeagle2/blinky/rust/src/: main.rs
PocketBeagle2/blinky/src/: main.rs
PocketBeagle2/button/: Cargo.toml  README.md
PocketBeagle2/button/rust/: Cargo.toml  README.md
PocketBeagle2/button/src/: main.rs
PocketBeagle2/eeprom/: Cargo.toml  README.md
PocketBeagle2/eeprom/rust/: README.md
PocketBeagle2/eeprom/src/: main.rs
PocketBeagle2/fade/: Cargo.toml  README.md
PocketBeagle2/fade/src/: main.rs
PocketBeagle2/hello_beagle/: Cargo.toml  README.md
PocketBeagle2/hello_beagle/src/: main.rs
PocketBeagle2/light_sensor/: README.md
PocketBeagle2/light_sensor/rust/: Cargo.toml
PocketBeagle2/light_sensor/rust/src/: main.rs
PocketBeagle2/seven_segment/: README.md
PocketBeagle2/seven_segment/python/: main.py
PocketBeagle2/seven_segment/rust/: Cargo.toml
PocketBeagle2/tonal_buzzer/: README.md
PocketBeagle2/tonal_buzzer/rust/: Cargo.toml
PocketBeagle2/tonal_buzzer/rust/src/: main.rs
docs/: Makefile  PocketBeagle-2-TechLab-Workshop-Instructor-Slides.xml  PocketBeagle-2-TechLab-Workshop-Student-Handouts.sil  PocketBeagle-2-TechLab-Workshop-Student-Handouts.xml  README.md  chapter1.typ  chapter2.typ  colors.typ  helpers.typ  main.typ  template.typ
docs/classes/: handouts.lua
(+18 files in other folders)
