[package]
name = "beagle_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
gpiod = { version = "0.3.0", optional = true }

[features]
default_features = []
pocketbeagle2 = []
gpiod = ["dep:gpiod"]
gpio = ["gpiod"]
pwm = []
button = ["gpio"]
pwm_led = ["pwm"]
beagle_eeprom = []
seven_segment = []
tonal_buzzer = ["pwm"]
rgb_led = []
sysfs = []
