[package]
name = "beagle_linux_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
gpiod = { version = "0.3.0", optional = true }

[features]
default_features = []
pocketbeagle2 = []
gpiod = ["dep:gpiod"]
gpio = ["gpiod"]
pwm = []
adc = []
led = ["gpio"]
button = ["gpio"]
pwm_led = ["pwm"]
beagle_eeprom = []
light_sensor = ["adc"]
seven_segment = []
