# This is a Rust Manifest as defined at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "button"
description = "Simple example to detect button presses"
version = "0.1.0"
license = "MIT"
authors = ["Ayush Singh <ayush@beagleboard.org>"]
edition = "2021"

[dependencies]
beagle_helper = { path = "../../../Libraries/rust/beagle_helper", features = ["chardev"] }
