# This is a Rust Manifest as defined at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "eeprom"
description = "Simple program to read EEPROM contents and print them to stdout."
version = "0.1.0"
license = "MIT"
authors = ["Ayush Singh <ayush@beagleboard.org>"]
edition = "2021"

[dependencies]
beagle_helper = { path = "../../../Libraries/rust/beagle_helper", features = ["beagle_eeprom", "pocketbeagle2"] }
