# This is a Rust Manifest as defined at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "fade"
description = "Simple example to fade an LED in and out using PWM. Also contains abstractions to use PWM using sysfs"
version = "0.1.0"
license = "MIT"
authors = ["Ayush Singh <ayush@beagleboard.org>"]
edition = "2021"

[dependencies]
beagle_helper = { path = "../../../Libraries/rust/beagle_helper", features = ["pwm_led", "pocketbeagle2"] }
