[package]
name = "rust"
version = "0.1.0"
description = "Simple example to play Harry Potter meoldy on a buzzer"
license = "MIT"
authors = ["Ayush Singh <ayush@beagleboard.org>"]
edition = "2021"

[dependencies]
beagle_linux_sdk = { path = "../../../Libraries/rust/beagle_linux_sdk", features = ["tonal_buzzer", "pocketbeagle2"] }
